# page-analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: linter-and-tests.yml  linter-check.yml
page_analyzer/: __init__.py  app.py  db.py  models.py  settings.py  types.py  utils.py
page_analyzer/templates/: 404.html  base.html  index.html  list_urls.html  navbar.html  show_url.html
